Tab cross fade experiment

--- a/assets/css/content-script.css
+++ b/assets/css/content-script.css
@@ -1,22 +1,15 @@
 .chrome-tab-blinder {
     z-index: 999999;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     overflow: hidden;
 
-    background-color: white;
+    position: absolute;
+    left: 0;
+    top: 0;
+
     opacity: 1;
 }
 
-.chrome-tab-blinder.roulette-fade-content-out {
-    opacity: 1;
-    -webkit-transition: opacity 800ms linear;
-}
-
-.chrome-tab-blinder.roulette-fade-content-in {
-    opacity: 0;
-    -webkit-transition: opacity 900ms linear;
+.fade-element-out {
+    opacity: 0 !important;
+    -webkit-transition: opacity 1000ms linear !important;
 }
